# dynax

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: conf.py  dynax.rst  index.rst
dynax/: __init__.py  _isphs.py  _lyapunov_function.py  _misc.py  _odesolver.py  _singals.py
scripts/: devil copy.py  devil.py  devil_2.py  temp.py  two_mass_oscillator.py
src/dynax/: _typing.py  constraints.py  history.py  losses.py  training.py
src/dynax/nn/: _FICNN.py  _linear.py
src/dynax/nn/derivative_models/: _HNN.py  _PNN.py  _PPNN.py  __init__.py  _stable_NODE.py
src/dynax/nn/function_models/: _FICNN.py  _LyapunovNN.py  _MNN.py  _SICNN.py  __init__.py  matrices.py
src/dynax/nn/function_models/inn/: __init__.py  _abs_invertible.py  _affine_coupling_block.py  _affine_coupling_layer.py  _inn_sequential.py  _permutations.py
src/dynax/nn/integration_models/: __init__.py  _latent_odesolver.py  _odesolver.py
tests/: test_odesolver.py
